[package]
name = "instant-acme"
version = "0.6.1"
edition = "2021"
rust-version = "1.67"
license = "Apache-2.0"
description = "Async pure-Rust ACME client"
homepage = "https://github.com/instant-labs/instant-acme"
repository = "https://github.com/instant-labs/instant-acme"
documentation = "https://docs.rs/instant-acme"
keywords = ["letsencrypt", "acme"]
categories = ["web-programming", "api-bindings"]

[features]
default = ["hyper-rustls", "ring"]
ring = ["dep:ring", "hyper-rustls?/ring", "rcgen/ring"]
aws-lc-rs = ["dep:aws-lc-rs", "hyper-rustls?/aws-lc-rs", "rcgen/aws_lc_rs"]
fips = ["aws-lc-rs", "aws-lc-rs?/fips"]

[dependencies]
aws-lc-rs = { version = "1.8.0", optional = true }
base64 = "0.21.0"
hyper = { version = "1.3.1", features = ["client", "http1", "http2"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2", "native-tokio", "tls12", "rustls-native-certs"], optional = true }
hyper-util = { version = "0.1.5", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
http-body-util = "0.1.2"
ring = { version = "0.17", features = ["std"], optional = true }
rustls-pki-types = "1.1.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.78"
thiserror = "1.0.30"

[dev-dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
rcgen = { version = "0.12", default-features = false, features = ["pem"] }
tokio = { version = "1.22.0", features = ["macros", "rt", "rt-multi-thread", "time"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[[example]]
name = "provision"
required-features = ["hyper-rustls"]
