[package]
name = "instant-acme"
version = "0.7.2"
edition = "2021"
rust-version = "1.70"
license = "Apache-2.0"
description = "Async pure-Rust ACME client"
homepage = "https://github.com/djc/instant-acme"
repository = "https://github.com/djc/instant-acme"
documentation = "https://docs.rs/instant-acme"
keywords = ["letsencrypt", "acme"]
categories = ["web-programming", "api-bindings"]

[features]
default = ["hyper-rustls", "ring"]
aws-lc-rs = ["dep:aws-lc-rs", "hyper-rustls?/aws-lc-rs", "rcgen/aws_lc_rs"]
fips = ["aws-lc-rs", "aws-lc-rs?/fips"]
hyper-rustls = ["dep:hyper", "dep:hyper-rustls", "dep:hyper-util"]
ring = ["dep:ring", "hyper-rustls?/ring", "rcgen/ring"]

[dependencies]
async-trait = "0.1"
aws-lc-rs = { version = "1.8.0", optional = true }
base64 = "0.22"
bytes = "1"
http = "1"
http-body = "1"
http-body-util = "0.1.2"
hyper = { version = "1.3.1", features = ["client", "http1", "http2"], optional = true }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2", "native-tokio", "tls12", "rustls-native-certs"], optional = true }
hyper-util = { version = "0.1.5", features = ["client", "client-legacy", "http1", "http2", "tokio"], optional = true }
ring = { version = "0.17", features = ["std"], optional = true }
rustls-pki-types = "1.1.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.78"
thiserror = "2.0.3"

[dev-dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
rcgen = { version = "0.13", default-features = false, features = ["pem"] }
rustls = { version = "0.23", default-features = false }
tempfile = "3"
tokio = { version = "1.22.0", features = ["macros", "rt", "rt-multi-thread", "time"] }
tracing = "0.1.37"
tracing-subscriber =  { version = "0.3.16", features = ["env-filter"] }

[[example]]
name = "provision"
required-features = ["hyper-rustls"]

# Pebble integration test.
# Disabled by default because it requires pebble & pebble-challtestsrv.
# Run with:
#  PEBBLE=path/to/pebble CHALLTESTSRV=path/to/pebble-challtestsrv cargo test --test pebble
[[test]]
name = "pebble"
required-features = ["hyper-rustls"]
